# Agents

./: README.md
crew_ai/: pyproject.toml
crew_ai/coder_agent/: pyproject.toml
crew_ai/coder_agent/output/: code_and_output.txt
crew_ai/coder_agent/src/coder_agent/: crew.py  main.py
crew_ai/debate/: .gitignore  README.md
crew_ai/debate/output/: decide.md  oppose.md  propose.md
crew_ai/debate/src/debate/: crew.py  main.py
crew_ai/engineering_team/: README.md  pyproject.toml
crew_ai/engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
crew_ai/engineering_team/src/engineering_team/: README.md  crew.py
crew_ai/financial_researcher/: .gitignore
crew_ai/financial_researcher/output/: report.md
crew_ai/financial_researcher/src/financial_researcher/: crew.py  main.py
crew_ai/stock_picker/: pyproject.toml
crew_ai/stock_picker/output/: trending_companies.json
crew_ai/stock_picker/src/stock_picker/: crew.py  main.py
lang_graph/: .gitignore  lang_graph_basics.py  lang_graph_basics_using_functional_api.py  lang_graph_basics_using_graph_api.py  lang_graph_checkpoint_memory.py  langgraph_checkpoint_memory.db  pyproject.toml
lang_graph/output/: chatbot_output.txt
mcp-docker-shell-server/: .gitignore  Dockerfile  README.md  pyproject.toml  shell_server.py
open_ai_agents/: .gitignore  README.md  Sales_Agent_README.md  open_ai_agent_foundations.py  pyproject.toml  simple_sales_agent_system.py
open_ai_agents/outputs/: sales_agent_outputs.txt  sales_manager_handoff_outputs.txt  sales_manager_tools_outputs.txt
(+4 files in other folders)
