[project]
name = "lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "cachetools>=6.2.4",
    "dotenv>=0.9.9",
    "gradio>=6.3.0",
    "ipython>=9.9.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pylint>=4.0.4",
    "ruff>=0.14.14",
]
